Bug 274472 - List of appointments does not revert to its default state when leaving calendar to the right
Summary: List of appointments does not revert to its default state when leaving calend...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-clock (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-29 23:02 UTC by Kai Uwe Broulik
Modified: 2011-05-30 12:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-05-29 23:02:50 UTC
Version:           unspecified (using Devel) 
OS:                Linux

In 4.7 the calendar has a two column view so it can display upcoming appointments and holidays righta away. When hovering a day, appointments on this day are displayed on the right column. When leaving the calendar widget, the list reverts to the upcoming appointments list. When leaving the calendar widget to the right, i.e. moving your mouse cursor from the calendar days directly to the appointments list, the list doesn’t reverted. It could be possible that this is to enable you to copy the appointment (select and copy/paste is enabled there) but since if you move from a day that is not on the right most column of the calendar, you will probably hover another day and display other appointments, so this is clearly a hover/onmouseout thingie :)

Reproducible: Always
Comment 1 Aaron J. Seigo 2011-05-30 12:31:17 UTC
Git commit b0c952f549e8335b8fdd64316541c753ad48b895 by Aaron Seigo.
Committed on 30/05/2011 at 12:29.
Pushed by aseigo into branch 'master'.

add separator, also fixes the hover-outs that were sometimes missing

BUG:274472
BUG:274475

M  +5    -0    libs/plasmaclock/calendar.cpp     

http://commits.kde.org/kde-workspace/b0c952f549e8335b8fdd64316541c753ad48b895