add separator, also fixes the hover-outs that were sometimes missing

BUG:274472
BUG:274475